Spacing issue solved

--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,17 @@ h1 {
 .col-lg-4 {
   width: 33.33%;
   float: left;
-  margin-left: 10px;
+  padding-left: 10px;
+  /* margin-left: 10px; */
 }
 
-/* .col-lg-4:last-child {
-  margin-right: 0;
-} */
+.col-lg-4:nth-child(2) {
+  padding-left: 20px;
+}
+
+.col-lg-4:fist-child {
+  padding-left: 0;
+}
 
 .col-lg-4 p {
   padding: 10px;
